# google-adk-sample

./: .clinerules  .gitignore  CLAUDE.md  README.md  adk-system-infrastructure-design-guideline.md  pyproject.toml  start.sh
docker-compose/: README.md
docs/: engineering-constitution-v3-memory-bank.md
dummy_fastapi_service/: __init__.py  main.py  test_main.py
dummy_fastapi_service/app/controllers/: team_controller.py  user_controller.py
dummy_fastapi_service/app/models/: schemas.py
dummy_fastapi_service/app/services/: service.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
my_agent/: agent.py
src/a2ui_agent_restaurants_finder/: agent.py
src/agent_number_guesser/: README.md  agent.py
src/agent_pd_troubleshooting/: README.md  agent.py
src/agent_progressive_disclosure/: README.md  agent.py
src/agent_progressive_disclosure_troubleshooting/: README.md  agent.py
src/agent_react_number_guesser/: README.md  __init__.py  agent.py  guess_number.py
src/agent_with_skills_register_user/: README.md  agent.py  agent_skill_registry.py  agent_tool_registry.py  tools.py
src/agent_with_skills_register_user/skills/: skill_assign_user_to_team.md  skill_register_user.md
src/common/: ai_model.py  dummy_service_tools.py  logging_plugin.py  otel_config.py  otel_plugin.py
tests/: test_agent_with_skills_registry.py
tests/common/: test_logging_plugin.py
