[project]
name = "google-adk-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.22.0",
    "litellm>=1.80.13",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "pydantic[email]>=2.12.5",
    "ruff>=0.14.10",
]
