[project]
name = "google-adk-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.31.0",
    "litellm>=1.80.13",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "rank-bm25>=0.2.2",
    "ruff>=0.14.10",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
